# studyllm

./: .gitignore  CLAUDE.md  LICENSE  PROJECT_STATUS.md  README.md  TODO.md  cliff.toml  eslint.config.js  package-lock.json  package.json  skills-lock.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: index.html
src/: App.css  App.tsx  main.tsx
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: crashlog.rs  credentials.rs  db.rs  lib.rs  main.rs
src-tauri/src/mcp/: commands.rs  google.rs  host.rs  mod.rs  registry.rs  runtime.rs
src-tauri/src/oauth/: commands.rs  config.rs  flow.rs  mod.rs
src/components/: AppSettingsPanel.tsx  ChatLab.tsx  ExplorePanel.tsx  FeatureExplainer.tsx  GroundingContrast.tsx  LessonsPanel.tsx  LibraryPanel.tsx  Markdown.tsx  McpMarketplace.tsx  McpPanel.tsx  McpToolExplorer.tsx  MessageAttachments.tsx  OnboardingWizard.tsx  PluginsPanel.tsx  PromptPlayground.tsx  ProvidersPanel.tsx  ResearchTrace.tsx  RetrievalExplorer.tsx  RetrievedSources.tsx  SettingsPanel.tsx  Sidebar.tsx  StudyModes.tsx  TokenExplorer.tsx  ToolCallBlock.tsx  icons.tsx
src/lib/: attachments.test.ts  attachments.ts  chunking.test.ts  chunking.ts  crashlog.ts  credentials.ts  curatedMcp.ts  db.ts  embeddings.test.ts  embeddings.ts  exportChat.ts  googleConnectors.ts  i18n.tsx  mcp.ts  mcpCatalog.test.ts  mcpCatalog.ts  modelCatalog.ts  oauth.ts  projection.test.ts  projection.ts  providerModels.test.ts  providerModels.ts  providerRouter.test.ts  providerRouter.ts  providers.ts  rag.test.ts  rag.ts  (+8 more)
(+4 files in other folders)
