[package]
name = "studyllm"
version = "0.2.0"
description = "A Tauri App"
authors = ["Victor Lamas"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "studyllm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2"
keyring = "4"
uuid = { version = "1", features = ["v4"] }
rmcp = { version = "0.9", features = ["client", "transport-child-process", "transport-streamable-http-client", "transport-streamable-http-client-reqwest"] }
tokio = { version = "1", features = ["process", "rt-multi-thread", "macros"] }
reqwest = { version = "0.12", features = ["stream", "json"] }
futures-util = "0.3"
zip = "2"
flate2 = "1"
tar = "0.4"

